Add JUL-to-SLF4J bridge for unified logging (minimal changes only)
Co-authored-by: TheStackTraceWhisperer <4791708+TheStackTraceWhisperer@users.noreply.github.com>